--- a/opencog/opencog-jupyter.yml
+++ b/opencog/opencog-jupyter.yml
@@ -1,25 +1,25 @@
 # Follow the instructions below for setting using jupyter notebooks with opencog.
 #
-version: '3'
+version: "3"
 services:
   jupyter:
     image: synthillect/opencog-jupyter:latest
-    ports: 
-        - "17001:17001"
-        - "18001:18001"
-        - "8080:8080"
-        - "8888:8888"
+    ports:
+      - "17001:17001"
+      - "18001:18001"
+      - "8080:8080"
+      - "8888:8888"
     working_dir: /opencog/notebooks
     volumes:
-        - $OPENCOG_SOURCE_DIR:/opencog
-        - $HOME/.gitconfig:/home/opencog/.gitconfig
-        - /tmp/.X11-unix/:/tmp/.X11-unix/:ro # For GUI
-        - $OPENCOG_NOTEBOOKS:/opencog/notebooks
+      - $OPENCOG_SOURCE_DIR:/opencog
+      - $HOME/.gitconfig:/home/opencog/.gitconfig
+      - /tmp/.X11-unix/:/tmp/.X11-unix/:ro # For GUI
+      - $OPENCOG_NOTEBOOKS:/opencog/notebooks
     environment: # Set environment variables within the container
-        - PYTHONPATH=/opencog/build/opencog/cython:/opencog/opencog/python/:/opencog/opencog/nlp/
-        - OPENCOG_SOURCE_DIR=/opencog
+      - PYTHONPATH=/opencog/build/opencog/cython:/opencog/opencog/python/:/opencog/opencog/nlp/
+      - OPENCOG_SOURCE_DIR=/opencog
     depends_on:
-        - relex
+      - relex
   postgres:
     image: singnet/postgres
     # Uncomment the following lines if you want to work on a production
