--- a/opencog/tools/cli/Dockerfile
+++ b/opencog/tools/cli/Dockerfile
@@ -17,7 +17,7 @@ FROM synthillect/cogutil
 RUN  /tmp/octool -aow ; ccache -C
 
 # Install tools for developers.
-RUN apt-get -y install telnet netcat-openbsd less vim python3-dbg \
+RUN apt-get -y update && apt-get -y install telnet netcat-openbsd less vim python3-dbg \
     tmux man valgrind gdb byobu
 
 USER opencog
