--- a/opencog/tools/jupyter_notebook/Dockerfile
+++ b/opencog/tools/jupyter_notebook/Dockerfile
@@ -8,30 +8,37 @@ RUN apt-get update --fix-missing && apt-get install -y wget bzip2 ca-certificate
     git mercurial subversion \
     curl python3-pip
 
-RUN python3 -m pip install jupyterlab ipykernel tornado
+RUN python3 -m pip install -U setuptools jupyterlab ipykernel tornado
+
+# --- guile kernel installation for Jupyter is suspended for now.
 
 # Install guile-json as it is needed for guile-kernel
-WORKDIR /opt/
+# WORKDIR /opt/
 
-RUN wget https://download.savannah.gnu.org/releases/guile-json/guile-json-3.2.0.tar.gz && \
-    tar xvf guile-json-3.2.0.tar.gz && \
-    rm guile-json-3.2.0.tar.gz && \
-    cd guile-json-3.2.0 && \
-    ./configure --prefix=/usr && \
-    make install
+# RUN wget https://download.savannah.gnu.org/releases/guile-json/guile-json-3.2.0.tar.gz && \
+#     tar xvf guile-json-3.2.0.tar.gz && \
+#     rm guile-json-3.2.0.tar.gz && \
+#     cd guile-json-3.2.0 && \
+#     ./configure --prefix=/usr && \
+#     make install
 # Why does it install in the wrong directory?
 # RUN mkdir -p /usr/local/share/guile/site/2.2/
 # RUN mv /usr/local/share/guile/site/json* /usr/share/guile/site/2.2/
 
 # ZMQ library to enable communication with jupyter notebook
-RUN wget https://raw.githubusercontent.com/jerry40/guile-simple-zmq/master/src/simple-zmq.scm -O /usr/share/guile/site/2.2/simple-zmq.scm
+# RUN git clone https://github.com/jerry40/guile-simple-zmq /tmp/guile-simple-zmq
+# RUN cd /tmp/guile-simple-zmq \
+#        && ./bootstrap \
+#        && ./configure \
+#        && make -j \
+#        && make install
 
 # Create a directory with the guile kernel in jupyter notebook kernels directory
-WORKDIR /usr/local/share/jupyter/kernels
+# WORKDIR /usr/local/share/jupyter/kernels
 
-RUN git clone --depth 1 https://github.com/jerry40/guile-kernel guile
+# RUN git clone --depth 1 https://github.com/jerry40/guile-kernel guile
 # Copy kernel description to the above folder
-COPY kernel.json /usr/local/share/jupyter/kernels/guile/
+# COPY kernel.json /usr/local/share/jupyter/kernels/guile/
 
 RUN groupadd -r jupyter_users && gpasswd -a opencog jupyter_users
 EXPOSE 8888
